--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.25.0
+  auth: ^8.2.0+02
+  firebase_auth: ^4.17.3
+  cloud_firestore: ^4.15.4
 
 dev_dependencies:
   flutter_test:
